--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "5.8.*",
         "laravel/tinker": "^1.0",
-        "laravelcollective/html": "^5.8"
+        "laravelcollective/html": "^5.8",
+        "squareboat/alert": "^1.0"
     },
 
     "require-dev": {
